main.css
/* Smooth scrolling down to "help" */
html {
  scroll-behavior: smooth;
}

body {
  background-color: linen;
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
}

#map-container {
  position: relative;
  z-index: 1;
}

#output-text-area {
  position: relative;
}

@media (min-width: 600px){
  #content {
    display: grid;
    height: 87vh;
    grid-template-columns: 3fr 1fr;
    grid-template-rows: repeat(12, 1fr);
    grid-gap: 2px;
    margin: 5px;
  }

  #map-container {
    grid-column: 1;
    grid-row: 1 / 11;
  }

  #output-text-area {
    grid-column: 1;
    grid-row: 11 / 13;
  }
}

@media (max-width: 600px){
  #map-container {height: 600px;}
  /* ul.topnav li.right,
  ul.topnav li {float: none;} */
  h1 {text-align: center;}
}

#map {
  width: 100%;
  height: 100%;
}

#load-button {
  position: absolute;
  bottom: 30px;
  width: 200px;
  left: calc(50% - 100px);
  z-index: 444;
  opacity: .7;
  background-color: #4CAF50; /* Green */
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  cursor: pointer;
  box-shadow: 2px 5px 4px #888888;
  border-radius: 8px;
}

#load-button:hover {
  opacity: 1;
}

#load-button:disabled {
  background: #999;
  color: #555;
  cursor: not-allowed;
  opacity: .7; /*overwrite opacity change on hover*/
}

#region-info {
  position: absolute;
  left: 0px;
  bottom: 0px;
  z-index: 444;
  /* width: 300px; */
  font-size: 14px;
  background-color: white;
  opacity: .9;
}

#loading-animation {
  position: absolute;
  left: calc(50% - 46px);
  top: 40%;
  border: 16px solid #f3f3f3;
  border-radius: 50%;
  border-top: 16px solid #3498db;
  width: 60px;
  height: 60px;
  -webkit-animation: spin 2s linear infinite; /* Safari */
  animation: spin 2s linear infinite;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

.grey-blur {
  filter: grayscale(100%) blur(1px);
}

#zoom-in {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  text-align: center;
  font-size: 25px;
  font-weight: bold;
  color: white;
  opacity: .6;
  background-color: red;
  z-index: 444;
  pointer-events: none; /*Makes sure, that map still can be panned and zoomed even if mouse hovers over text */
}

.hide {
  display: none;
}

.item {
  display: grid;
  grid-template-columns: 1fr 4fr 1fr;
  grid-template-areas:
    "checkmark title delete";
}

.checkmark {
  position: relative;
  grid-area: checkmark;
}

.title {
  position: relative;
  grid-area: title;
}

.delete {
  position: relative;
  grid-area: delete;
  cursor: pointer;
}

.dname {
  width: 100%;
  background-color: inherit;
  border-style: none;
  text-align: center;
  font-size: 1em;
}

.dname:hover {
  background-color: whitesmoke;
  border-style: inset;
  border-width: 3px;
}

#add-district {
  position: relative;
  cursor: pointer;
  padding: 5px;
}

textarea {
  height: 100%;
  width: calc(100% - 5px);
  padding: 2px;
  border: none;
  resize: none;
  overflow: hidden;
}

#item_0 {
  background-color: #ac5c91;
}

#item_1 {
  background-color: #d5dc76;
}

#item_2 {
  background-color: #b5d29f;
}

#item_3 {
  background-color: #b383b3;
}

#item_4 {
  background-color: #71b37b;
}

#item_5 {
  background-color: #8a84a3;
}

#item_6 {
  background-color: #d09440;
}

#item_7 {
  background-color: #578e86;
}

#item_8 {
  background-color: #d56d76;
}

#item_9 {
  background-color: #4f93c0;
}

#item_10 {
  background-color: #69999f;
}

details {
  margin: 5px;
}

summary {
  padding: 4px;
  background-color: #dad1c9;
  border: none;
  cursor: pointer;
}

summary:hover {
  background-color: #b1a8a8;
}

img {
  height: 40px;
  width: auto;
}

.dustbin {
  fill: white;
  width: 40px;
  height: 40px;
}

.delete:hover .dustbin {
  fill: red;
}

.add-district-button {
  width: 40px;
  height: 40px;
  /* fill: green; */
  opacity: .7;
  fill: #4CAF50;
}

#add-district:hover .add-district-button{
  opacity: 1;
}

#how-to-image {
  width:98%;
  max-width:1600px;
  height:auto;
  border: 3px solid red;
}

iframe {
  max-width: 100%;
}

/*The 3 items below have been entered to center the text vertically
(https://stackoverflow.com/a/45599428/5263954)*/
#map-container, .checkmark, .title, .delete, #add-district {
  display: flex;
  justify-content: center;
  align-items: center;
}

.copy-button {
  position: absolute;
  right: 5px;
  top: 5px;
}

#graphic {
  color: #394F6D;
}

#graphic:hover {
  cursor: pointer;
  color: #9DAAB6;
}

.copy-button .tooltiptext {
  width: 140px;
  background-color: #555;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px;
  position: absolute;
  z-index: 1;
  top: -8px;
  left: -160px;
  opacity: 0;
  transition: opacity 0.3s;
}

.copy-button .tooltiptext::after {
  content: "";
  position: absolute;
  top: 10px;
  left: 150px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent transparent #555;
}

#graphic:hover ~ .tooltiptext {
  opacity: 1;
}

